--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <br>
                                 <br>
                                 <p>
-                                    Hello, I’m a machine learning engineer from Osaka, Japan. I am currently doing my masters' project on urban simulation modeling at University College London. I am working remotely at <a href="http://exaintelligence.jp/">Exaintelligence</a> as an intern researching on Deep Neural Network. I love to travel. My next destination is Camino de Santiago. Let me know if you want to join me. My CV is <a href="cv/index.pdf">here</a>.
+                                    Hello, I’m a machine learning engineer from Osaka, Japan. I am currently doing my masters' project on urban simulation modeling at University College London. I am working remotely at <a href="http://exaintelligence.jp/">Exaintelligence</a> as an intern researching on Deep Neural Network. I love to travel. My next destination is Camino de Santiago. Let me know if you want to join me. My Resume is <a href="resume/index.pdf">here</a>.
                                 </p>
                                 <img width="500px"  src="http://ghchart.rshah.org/soma11soma11" alt="soma11soma11's Github chart" />
                                 <br>
