--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>three.js css3d - youtube</title>
+		<title>Soma Suzuki</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
@@ -41,7 +41,7 @@
 				div.style.backgroundColor = '#000';
 
 				var a = document.createElement('a');
-				a.href = "index.html";
+				a.href = "http://google.com";
 				div.appendChild(a);
 
 				var myImage = document.createElement( 'img' );
