--- a/PREVIOUS/index.html
+++ b/PREVIOUS/index.html
@@ -44,7 +44,7 @@
 
 
 
-      
+
 
 
 
@@ -337,7 +337,7 @@
             <script type='text/javascript' src='http://code.jquery.com/jquery-1.10.2.min.js?ver=1.10.2'></script>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
             <script src="https://ajax.googleapis.com/ajax/libs/threejs/r76/three.min.js"></script>
-            <script src="./js/blender.js"></script>
+            <!-- <script src="./js/blender.js"></script> -->
 
 
 
