--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 			</div>
 			<span id="typed"></span>
 
+
+
+
     <script src="js/typed.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/threejs/r76/three.min.js"></script>
@@ -36,7 +39,7 @@
 		<script src="js/CSS3DRenderer.js"></script>
 
 		<div id="container"></div>
-		<div id="blocker"></div>
+		<!-- <div id="blocker"></div> -->
 
 		<script>
 
@@ -107,7 +110,7 @@
 				// Block iframe events when dragging camera
 
 				var blocker = document.getElementById( 'blocker' );
-				blocker.style.display = 'none';
+				// blocker.style.display = 'none';
 
 				document.addEventListener( 'mousedown', function () { blocker.style.display = ''; } );
 				document.addEventListener( 'mouseup', function () { blocker.style.display = 'none'; } );
@@ -131,7 +134,7 @@
 
 			}
 
-
 		</script>
+
 	</body>
 </html>
