--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta property="og:image" content="image/og_image" />
+		<meta name="twitter:card" content="image/og_image" />
 		<link rel="icon" type="image/png" href="favicon_s.ico">
 		<link rel="stylesheet" href="css/main.css">
 		<title>SOMA</title>
