--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<meta property="og:image" content="image/og_image.jpg" />
-		<meta name="twitter:card" content="image/og_image.jpg" />
+
+		<meta name="twitter:card" content="summary_large_image" /> /*①*/
+		<meta name="twitter:site" content="@11_soma_" /> /*②*/
+		<meta property="og:url" content="https://soma11soma11.github.io/" /> /*③*/
+		<meta property="og:title" content="Soma Suzuki" /> /*④*/
+		<meta property="og:description" content="Soma Suzuki portfolio" /> /*⑤*/
+		<meta property="og:image" content="image/og_image.jpg" /> /*⑥*/
+
 		<link rel="icon" type="image/png" href="favicon_s.ico">
 		<link rel="stylesheet" href="css/main.css">
 		<title>SOMA</title>
