--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-		<meta name="twitter:card" content="summary_large_image" /> /*①*/
+		<meta name="twitter:card" content="summary" /> /*①*/
 		<meta name="twitter:site" content="@11_soma_" /> /*②*/
 		<meta property="og:url" content="https://soma11soma11.github.io/" /> /*③*/
 		<meta property="og:title" content="Soma Suzuki" /> /*④*/
