--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-		<meta name="twitter:card" content="summary" /> /*①*/
-		<meta name="twitter:site" content="@11_soma_" /> /*②*/
-		<meta property="og:url" content="https://soma11soma11.github.io/" /> /*③*/
-		<meta property="og:title" content="Soma Suzuki" /> /*④*/
-		<meta property="og:description" content="Soma Suzuki portfolio" /> /*⑤*/
-		<meta property="og:image" content="image/og_image.jpg" /> /*⑥*/
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@11_soma_" />
+		<meta property="og:url" content="https://soma11soma11.github.io/" /> /
+		<meta name="twitter:image" content="imgage/og_image.jpg" />
+		<!-- <meta property="og:title" content="Soma Suzuki" />
+		<meta property="og:description" content="Soma Suzuki portfolio" />
+		<meta property="og:image" content="image/og_image.jpg" />  -->
 
 		<link rel="icon" type="image/png" href="favicon_s.ico">
 		<link rel="stylesheet" href="css/main.css">
