--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<meta name="twitter:site" content="@11_soma_" />
 		<meta property="og:url" content="https://soma11soma11.github.io/" /> /
 		<meta name="twitter:image" content="imgage/og_image.jpg" />
-		<!-- <meta property="og:title" content="Soma Suzuki" />
+		<meta property="og:title" content="Soma Suzuki" />
 		<meta property="og:description" content="Soma Suzuki portfolio" />
-		<meta property="og:image" content="image/og_image.jpg" />  -->
+		<meta property="og:image" content="image/og_image.jpg" />
 
 		<link rel="icon" type="image/png" href="favicon_s.ico">
 		<link rel="stylesheet" href="css/main.css">
