--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="Soma Suzuki portfolio" />
-		<meta name="twitter:image" content="imgage/og_image.jpg" />
+		<meta name="twitter:image" content="image/og_image.jpg" />
 
 
 		<link rel="icon" type="image/png" href="favicon_s.ico">
