--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="Soma Suzuki portfolio" />
-		<meta name="twitter:image" content="image/og_image.png" />
+		<!-- <meta name="twitter:image" content="image/og_image.png" /> -->
+		<meta property="og:image" content="https://www.google.co.uk/search?q=hoge&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjctafH7PHZAhWrC8AKHf-FDnEQ_AUICigB&biw=1440&bih=803#imgrc=D_SdG0OkaTe5fM:">
 
 
 		<link rel="icon" type="image/png" href="favicon_s.ico">
