--- a/nts.html
+++ b/nts.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" type="image/png" href="favicon_s.ico">
-        <title>Soma Suzuki</title>
+        <title>NTS cover letter</title>
         <!-- Mobile Specific Metas
         ================================================== -->
         <meta name="format-detection" content="telephone=no">
@@ -31,36 +31,35 @@
             Slider Section Start
             ================================================== -->
             <section id="about">
+              <div id="cover-letter">
                 <div class="container">
-                    <div class="row">
-                       <div class="col-md-6 col-sm-6">
-                           <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                               <h1>
-                               Soma Suzuki
-                               </h1>
-                               <img width="400px" src="image/soma1.png" alt="">
-                               </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="block wow fadeInLeft" data-wow-delay=".3s" data-wow-duration="500ms">
-                                <br>
-                                <br>
-                                <br>
-                                <p>
-                                    I am currently a master's student in <a id="resume" href="https://www.ucl.ac.uk/bartlett/casa/">Center of Advanced Spatial Analysis</a>
-                                    in <a id="resume" href="https://www.ucl.ac.uk/">University College London</a>.
-                                    My main research interest lies in the agent-based human behavior modeling in the urban environment. In particular, I am interested in how music can enhance the human interaction, and contribute to urban reviatalization through the community building. My bachelor degree is in Physics from <a id="resume" href="https://www.s-es.t.kyoto-u.ac.jp/en?set_language=en">Kyoto University</a>.
-                                    Before starting my master's course, I worked at <a id="resume" href="http://dci.mit.edu/">MIT Digital Currency Initiative</a> to address <a id="resume" href="http://open-music.org">Open Music Initiative</a>.
-                                    I am also a co-founder of <a id="resume" href="http://www.echowe.org/">Echowe</a>, spin-off from <a id="resume" href="hhttp://open-music.org/summer-lab/">OMI Summer Lab</a>, where we attempt to reward the musicians automatically when their music is used for sampling through blockchain.
-                                    My CV is <a id="resume" href="resume/index.pdf">here</a>.
-                                </p>
-                                  <img width="500px"  src="http://ghchart.rshah.org/soma11soma11" alt="soma11soma11's Github chart" />
-
-
-                            </div>
-                        </div>
-                    </div>
+                <br>
+                <br>
+                <h1>NTS cover letter</h1>
+                <br>
+                <p>
+                  I am strongly interested in a frontend developer role at NTS, as it is directly linked to my personal interest in the urban revitalization through music.
+                  I am currently pursuing my master's degree at <a id="resume" href="https://www.ucl.ac.uk/bartlett/casa/">Center of Advanced Spatial Analysis</a>
+                  in University College London. My research focuses on how music can enhance the human interaction in the city, and contribute to urban reviatalization.
+                  I believe that NTS website strongly contribute to the community building; the <a id="resume" href="https://www.nts.live/projects/aphex-twin/">password attempt</a> broadcasted on the live stream, for example, enabled the participation of the audience in the performance.
+                </p>
+                <br>
+                <p>
+                  In addition to the community engagement, my interest lies in the spatial aspect of the music in London. With three of my course mate, we are developing a software <a id="resume" href="#"> Funiki blender</a>,  where you can see
+                  the average BPM and the "danceability" of each borough in London. We believe this software can serve as a tool to investigate the cultural background of the districtis with the viewpoint of music.
+                  Thus, among the many of great projects at NTS, I am especially interested in <a id="resume" href="http://londontracks.ntslive.co.uk/"> London Tracks</a>, and I am very much looking forward to contribute to the project.
+                </p>
+                <br>
+                <p>
+                  Last but not least, I am generally interested in music and music industry (I know it sounds silly). Through the conversation with my friends who <a id="resume" href="https://www.youtube.com/watch?v=U-AG2pwa2j4">do music</a>, I have always been wondering if there is any way where I can support them to focus on their creative work without worrying about moeny.
+                  Before starting my master's course, I worked at <a id="resume" href="http://dci.mit.edu/">MIT Digital Currency Initiative</a> to address <a id="resume" href="http://open-music.org">Open Music Initiative</a>, where we strive to create open source protocol for the identificaion of the right holders in the music industry.
+                  I am also a co-founder of <a id="resume" href="http://www.echowe.org/">Echowe</a>, spin-off from <a id="resume" href="hhttp://open-music.org/summer-lab/">OMI Summer Lab</a>, with the aim of compensating the musicians automatically and fairly by means of the distributed ledger technology.
+                </p>
+                <br>　
+                <br>
+                <p>You can download this cover letter as <a id="resume" href="resume/index.pdf">PDF </a>(yay, HR friendly) </p>.
                 </div>
+              </div>
             </section> <!-- /#about -->
             <!--
             ==================================================
