--- a/nts.html
+++ b/nts.html
@@ -38,26 +38,26 @@
                 <h1>NTS cover letter</h1>
                 <br>
                 <p>
-                  I am strongly interested in a frontend developer role at NTS, as it is directly linked to my personal interest in the urban revitalization through music.
-                  I am currently pursuing my master's degree at <a id="resume" href="https://www.ucl.ac.uk/bartlett/casa/">Center of Advanced Spatial Analysis</a>
-                  in University College London. My research focuses on how music can enhance the human interaction in the city, and contribute to urban reviatalization.
-                  I believe that NTS website strongly contribute to the community building; the <a id="resume" href="https://www.nts.live/projects/aphex-twin/">password attempt</a> broadcasted on the live stream, for example, enabled the participation of the audience in the performance.
+                  I am strongly interested in a frontend developer role at NTS, as it is directly linked to my personal interest in the urban revitalisation through music.
+                  I am currently pursuing my master's degree at <a id="resume" href="https://www.ucl.ac.uk/bartlett/casa/">Centre of Advanced Spatial Analysis</a>
+                  in University College London. My research focuses on how music can enhance the human interaction in the city, and contribute to urban revitalisation.
+                  I believe that NTS website strongly contributes to the community building; the <a id="resume" href="https://www.nts.live/projects/aphex-twin/">password attempt</a> broadcasted on the live stream, for example, enabled the participation of the audience in the performance.
                 </p>
                 <br>
                 <p>
                   In addition to the community engagement, my interest lies in the spatial aspect of the music in London. With three of my course mate, we are developing a software <a id="resume" href="#"> Funiki blender</a>,  where you can see
-                  the average BPM and the "danceability" of each borough in London. We believe this software can serve as a tool to investigate the cultural background of the districtis with the viewpoint of music.
+                  the average BPM and the "danceability" of each borough in London. We believe this software can serve as a tool to investigate the cultural background of the districts with the viewpoint of music.
                   Thus, among the many of great projects at NTS, I am especially interested in <a id="resume" href="http://londontracks.ntslive.co.uk/"> London Tracks</a>, and I am very much looking forward to contribute to the project.
                 </p>
                 <br>
                 <p>
-                  Last but not least, I am generally interested in music and music industry (I know it sounds silly). Through the conversation with my friends who <a id="resume" href="https://www.youtube.com/watch?v=U-AG2pwa2j4">do music</a>, I have always been wondering if there is any way where I can support them to focus on their creative work without worrying about moeny.
-                  Before starting my master's course, I worked at <a id="resume" href="http://dci.mit.edu/">MIT Digital Currency Initiative</a> to address <a id="resume" href="http://open-music.org">Open Music Initiative</a>, where we strive to create open source protocol for the identificaion of the right holders in the music industry.
-                  I am also a co-founder of <a id="resume" href="http://www.echowe.org/">Echowe</a>, spin-off from <a id="resume" href="hhttp://open-music.org/summer-lab/">OMI Summer Lab</a>, with the aim of compensating the musicians automatically and fairly by means of the distributed ledger technology.
+                  Last but not least, I am generally interested in music and music industry (I know it sounds silly). Through the conversation with my friends who <a id="resume" href="https://www.youtube.com/watch?v=U-AG2pwa2j4">do music</a>, I have always been wondering if there is any way where I can support them to focus on their creative work without worrying about money.
+                  Before starting my master's course, I worked at <a id="resume" href="http://dci.mit.edu/">MIT Digital Currency Initiative</a> to address <a id="resume" href="http://open-music.org">Open Music Initiative</a>, where we strive to create open source protocol for the identification of the right holders in the music industry.
+                  I am also a co-founder of <a id="resume" href="http://www.echowe.org/">Echowe</a>, a spin-off from <a id="resume" href="hhttp://open-music.org/summer-lab/">OMI Summer Lab</a>, with the aim of compensating the musicians automatically and fairly by means of the distributed ledger technology.
                 </p>
                 <br>　
                 <br>
-                <p>You can download this cover letter as <a id="resume" href="resume/index.pdf">PDF </a>(yay, HR friendly) </p>.
+                <p>You can download this cover letter as <a id="resume" href="resume/nts">PDF </a>(yay, HR friendly) </p>.
                 </div>
               </div>
             </section> <!-- /#about -->
