--- a/nts.html
+++ b/nts.html
@@ -57,7 +57,7 @@
                 </p>
                 <br>　
                 <br>
-                <p>You can download this cover letter as <a id="resume" href="resume/nts.pdf">PDF </a>(yay, HR friendly) </p>.
+                <p>You can download this cover letter as <a id="resume" href="cover-letter/index.pdf">PDF </a>(yay, HR friendly) </p>.
                 </div>
               </div>
             </section> <!-- /#about -->
