--- a/nts.html
+++ b/nts.html
@@ -51,7 +51,7 @@
                 </p>
                 <br>
                 <p>
-                  Last but not least, I am generally interested in music and music industry (I know it sounds silly). Through the conversation with my friends who <a id="resume" href="https://www.youtube.com/watch?v=U-AG2pwa2j4">do music</a>, I have always been wondering if there is any way where I can support them to focus on their creative work without worrying about money.
+                  Last but not least, I am generally interested in music and music industry. Through the conversation with my friends who <a id="resume" href="https://www.youtube.com/watch?v=U-AG2pwa2j4">do music</a>, I have always been wondering if there is any way where I can support them to focus on their creative work without worrying about money.
                   Before starting my master's course, I worked at <a id="resume" href="http://dci.mit.edu/">MIT Digital Currency Initiative</a> to address <a id="resume" href="http://open-music.org">Open Music Initiative</a>, where we strive to create open source protocol for the identification of the right holders in the music industry.
                   I am also a co-founder of <a id="resume" href="http://www.echowe.org/">Echowe</a>, a spin-off from <a id="resume" href="hhttp://open-music.org/summer-lab/">OMI Summer Lab</a>, with the aim of compensating the musicians automatically and fairly by means of the distributed ledger technology.
                 </p>
