removed jap phrases

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 			</div>
 			<span id="typed"></span> -->
 
-			<div id="typed-strings">
+			<!-- <div id="typed-strings">
 				 <p>そーまちゃんの為に働かないと…誕生日30連そーま、そーまのばあちゃんになった妄想してたらそーまめちゃくちゃいいこ過ぎてばあちゃん目頭熱くなそーまだらけ同じキーボード買ったてw今週のそーまは某クマ風味そーまゼツボー荘の主演やってたの忘れてたそーまかわいくなったねぇ次イベそーま欲しいからスカウト回すべきか否かそーまポイボかな復刻頑張ってそーま以外貰えたので次もぼちほちやりますねそーま！！！ ゆうくん！！！そーまとみつるとつむぎとそら行方不明ですどこまぢ新幹線高いせめて1万くらいにしてほしいよ笑そーまなんだかんだあそんでくれるんだぞワーそーまや〜そーまとマグナペア狩りして遊んでどうも、そーま！トランジスタですそーまぁ！問題！ソーマかわいそーそーまそーまよさんはなにオタクなのかそーま就職先なにーそーまありがとぉぉぉおかえりそーまそーまに脅されて撮った変顔がこちら私もそーまさんのお写真大好きですよさいとーそーま氏の声聴くだけで涙が出てくるうまそーまぐおさん金持ち説いまそーまのくるまあらってるそーまさんのシャルルで寝落ちなんて幸せすぎるまじか！そーま斎藤そーま一枚どんくらいになるかなあそーまは155くらい神崎そーまマンそーま課金揺らいでるってマア垢でさいとーそーまとかサイコーかよそーまがランボだったら諦めがつくからそーまは２年生の中で一番好きだよそーまこの前ポイボだからランボそーまアングルがランボ感そーまとよっちんのやつしか入ってなかったそーまじゃなくてソーマねwそーま君ラーメンありがとうございましたさーそーまん撮るっゴキブリがそーまを殺してくれた～</p>
 			</div>
-			<span id="typed"></span>
+			<span id="typed"></span> -->
 
     <script src="js/typed.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
