--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
 				var img = document.createElement('img');
-				img.src = [ 'src/image/', id, '?rel=0' ].join( '' );
+				img.src = [ 'src-asset/image/', id, '?rel=0' ].join( '' );
 				img.style.width = '480px';
 				img.style.height = '360px';
 				a.appendChild(img);
@@ -95,15 +95,20 @@
 				renderer.domElement.style.top = 0;
 				container.appendChild( renderer.domElement );
 
+				// Image width = 480px
+				n = 9
+
 				var group = new THREE.Group();
-				var R = 240 / (Math.tan(Math.PI / 7));
-				group.add( new Element( "https://medium.com/@somasuzuki/pedestrian-trajectory-generator-bfafe23165a9", 'map.png', 0, 0, - R, Math.PI ) );
-				group.add( new Element( "https://arxiv.org/abs/1712.07887", 'urban_simulation.png', - R*Math.cos(Math.PI * 25/14), 0, R*Math.sin(Math.PI * 25/14), 9 * Math.PI / 7 ) );
-				group.add( new Element( "https://medium.com/@somasuzuki/person-identification-55e323ca5507", 'person_identification.png', - R*Math.cos(Math.PI * 29/14), 0, R*Math.sin(Math.PI * 29/14), 11 * Math.PI / 7 ) );
-				group.add( new Element( "https://medium.com/@somasuzuki/open-music-initiative-summer-lab-2017-d26f4a5aad2a", 'omi.png', - R*Math.cos(Math.PI * 33/14), 0, R*Math.sin(Math.PI * 33/14), 13 * Math.PI / 7 ) );
-				group.add( new Element( "soma/index.html", 'soma2.png', - R*Math.cos(Math.PI * 37/14), 0, R*Math.sin(Math.PI * 37/14), 15 * Math.PI / 7 ) );
-				group.add( new Element( "https://arxiv.org/abs/1801.00464", 'irl.png', - R*Math.cos(Math.PI * 41/14), 0, R*Math.sin(Math.PI * 41/14), 17 * Math.PI / 7 ) );
-				group.add( new Element( "https://gist.github.com/soma11soma11/7439030d511cd4757b2078cf6f4f0c50", 'energy_simulation.png', - R*Math.cos(Math.PI * 45/14), 0, R*Math.sin(Math.PI * 45/14), 19 * Math.PI / 7 ) );
+				var R = 240 / (Math.tan(Math.PI / n));
+				group.add( new Element( "https://medium.com/@somasuzuki/pedestrian-trajectory-generator-bfafe23165a9", 'map.png', - R*Math.cos(Math.PI * 3/2), 0, R*Math.sin(Math.PI * 3/2), Math.PI ) );
+				group.add( new Element( "https://arxiv.org/abs/1712.07887", 'urban_simulation.png', - R*Math.cos(Math.PI * (3/2 + 2/n)), 0, R*Math.sin(Math.PI * (3/2 + 2/n)), (n+2) * Math.PI / n ) );
+				group.add( new Element( "https://medium.com/@somasuzuki/person-identification-55e323ca5507", 'person_identification.png', - R*Math.cos(Math.PI * (3/2 + 4/n)), 0, R*Math.sin(Math.PI * (3/2 + 4/n)), (n+4) * Math.PI / n ) );
+				group.add( new Element( "https://medium.com/@somasuzuki/open-music-initiative-summer-lab-2017-d26f4a5aad2a", 'omi.png', - R*Math.cos(Math.PI * (3/2 + 6/n)), 0, R*Math.sin(Math.PI * (3/2 + 6/n)), (n+6) * Math.PI / n ) );
+				group.add( new Element( "soma/index.html", 'soma2.png', - R*Math.cos(Math.PI * (3/2 + 8/n)), 0, R*Math.sin(Math.PI * (3/2 + 8/n)), (n+8) * Math.PI / n ) );
+				group.add( new Element( "https://arxiv.org/abs/1801.00464", 'irl.png', - R*Math.cos(Math.PI * (3/2 + 10/n)), 0, R*Math.sin(Math.PI * (3/2 + 10/n)), (n+10) * Math.PI / n ) );
+				group.add( new Element( "https://medium.com/@somasuzuki/fujisawa-sustainable-smart-town-f38ffc26bf2", 'pana.png', - R*Math.cos(Math.PI * (3/2 + 12/n)), 0, R*Math.sin(Math.PI * (3/2 + 12/n)), (n+12) * Math.PI / n ) );
+				group.add( new Element( "https://city-blender.com/", 'blender.png', - R*Math.cos(Math.PI * (3/2 + 14/n)), 0, R*Math.sin(Math.PI * (3/2 + 14/n)), (n+14) * Math.PI / n ) );
+				group.add( new Element( "https://gist.github.com/soma11soma11/7439030d511cd4757b2078cf6f4f0c50", 'energy_simulation.png', - R*Math.cos(Math.PI * (3/2 + 16/n)), 0, R*Math.sin(Math.PI * (3/2 + 16/n)), (n+16) * Math.PI / n ) );
 				scene.add( group );
 
 				controls = new THREE.TrackballControls( camera );
