--- a/soma/index.html
+++ b/soma/index.html
@@ -38,7 +38,7 @@
                                <h1>
                                Soma Suzuki
                                </h1>
-                               <img width="400px" src="../src/image/soma1.png" alt="">
+                               <img width="400px" src="../src-asset/image/soma1.png" alt="">
                                </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
