--- a/soma/index.html
+++ b/soma/index.html
@@ -5,7 +5,7 @@
         ================================================== -->
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="icon" type="image/png" href="favicon_s.ico">
+        <link rel="icon" type="image/png" href="../favicon_s.ico">
         <title>Soma Suzuki</title>
         <!-- Mobile Specific Metas
         ================================================== -->
@@ -89,7 +89,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a  href="mailto:soma.suzuki.ku@gmail.com?subject=Soma, you are a cool guy.&amp;body=Let's go for a coffee.">
+                                <a  href="mailto:soma.suzuki.ku@gmail.com?subject=Soma, you are a cool guy.&amp;body=Let's have a coffee.">
                                     <i class="ion-email"></i>
                                 </a>
                             </li>
