--- a/soma/index.html
+++ b/soma/index.html
@@ -47,12 +47,8 @@
                                 <br>
                                 <br>
                                 <p>
-                                    I am currently a master's student in <a id="resume" href="https://www.ucl.ac.uk/bartlett/casa/">Center of Advanced Spatial Analysis</a>
-                                    in <a id="resume" href="https://www.ucl.ac.uk/">University College London</a>.
-                                    My main research interest lies in the agent-based human behavior modeling in the urban environment. Specifically, I attempt to combine the rule-based behavior modeling and the data-based behavior modeling to understand pedestrian movement in the city. 
-                                    And, I am also interested in how music can enhance the human interaction in urban context. I am doing my best (really?) to seek the intersection between these seemingly two different interests. My bachelor degree is in Physics from <a id="resume" href="https://www.s-es.t.kyoto-u.ac.jp/en?set_language=en">Kyoto University</a>.
-                                    Before starting my master's course, I worked at <a id="resume" href="http://dci.mit.edu/">MIT Digital Currency Initiative</a> to address <a id="resume" href="http://open-music.org">Open Music Initiative</a>.
-                                    
+                                    I am currently a master's student at <a id="resume" href="https://www.ucl.ac.uk/bartlett/casa/">The Bartlett Centre for Advanced Spatial Analysis</a> in University College London. My main research interest lies in the agent-based human behaviour modelling in the urban environment. Specifically, I attempt to combine the rule-based behaviour modelling and the data-based behaviour modelling to understand pedestrian movement in the city.
+                                    My bachelor degree is in Physics from <a id="resume" href="https://www.s-es.t.kyoto-u.ac.jp/en?set_language=en">Kyoto University</a>.
                                     My CV is <a id="resume" href="resume/index.pdf">here</a>.
                                 </p>
                                   <img width="500px"  src="http://ghchart.rshah.org/soma11soma11" alt="soma11soma11's Github chart" />
