changed soma profile2

--- a/soma/index.html
+++ b/soma/index.html
@@ -48,12 +48,13 @@
                                 <br>
                                 <p>
                                     I am currently a master's student at <a id="resume" href="https://www.ucl.ac.uk/bartlett/casa/">The Bartlett Centre for Advanced Spatial Analysis</a> in University College London. My main research interest lies in the agent-based human behaviour modelling in the urban environment. Specifically, I attempt to combine the rule-based behaviour modelling and the data-based behaviour modelling to understand pedestrian movement in the city.
+                                    After the fortunate opportunity at <a id="resume" href="https://www.media.mit.edu/projects/open-music-initiative/overview/">Open Music Initiative</a> last summer, I also begun to seek the applications of blockchain in urban development.
                                     My bachelor degree is in Physics from <a id="resume" href="https://www.s-es.t.kyoto-u.ac.jp/en?set_language=en">Kyoto University</a>.
                                     My CV is <a id="resume" href="resume/index.pdf">here</a>.
                                 </p>
                                   <img width="500px"  src="http://ghchart.rshah.org/soma11soma11" alt="soma11soma11's Github chart" />
 
-
+                                  
                             </div>
                         </div>
                     </div>
