--- a/soma/index.html
+++ b/soma/index.html
@@ -48,7 +48,7 @@
                                 <br>
                                 <p>
                                     I am currently a master's student at <a id="resume" href="https://www.ucl.ac.uk/bartlett/casa/">The Bartlett Centre for Advanced Spatial Analysis</a> in University College London. My main research interest lies in the agent-based human behaviour modelling in the urban environment. Specifically, I attempt to combine the rule-based behaviour modelling and the data-based behaviour modelling to understand pedestrian movement in the city.
-                                    After the fortunate opportunity at <a id="resume" href="https://www.media.mit.edu/projects/open-music-initiative/overview/">Open Music Initiative</a> last summer, I also begun to seek the applications of blockchain in urban development.
+                                    After the fortunate opportunity at <a id="resume" href="https://www.media.mit.edu/projects/open-music-initiative/overview/">Open Music Initiative</a> last summer, I also began to seek the applications of blockchain in urban development.
                                     My bachelor degree is in Physics from <a id="resume" href="https://www.s-es.t.kyoto-u.ac.jp/en?set_language=en">Kyoto University</a>.
                                     My CV is <a id="resume" href="resume/index.pdf">here</a>.
                                 </p>
